--- a/app/views/layouts/_header_ua.html.erb
+++ b/app/views/layouts/_header_ua.html.erb
@@ -1,10 +1,11 @@
 <div class="container">
-      <header class="d-flex justify-content-center py-3">
-        <ul class="nav nav-pills">
-            <%= link_to "/ua", rel: 'nofollow', class: "nav-link #{ is_active('index')}" do %>
-                <i class="bi bi-house-fill"></i>
-            <% end %>
-            <li class="nav-item"><%= link_to "Проєкти", "/ua/projects", class: "nav-link #{ is_active('projects')}" %></li>
-        </ul>
-    </header>
+  <header class="d-flex justify-content-center py-3">
+    <ul class="nav nav-pills">
+        <%= link_to "/ua", rel: 'nofollow', class: "nav-link #{ is_active('index')}" do %>
+        <i class="bi bi-house-fill"></i>
+        <% end %>
+        <li class="nav-item"><%= link_to "Проєкти", "/ua/projects", class: "nav-link #{ is_active('projects')}" %></li>
+        <li class="nav-item"><%= link_to "Особисте", "/ua/personal", class: "nav-link #{ is_active('personal')}" %></li>
+    </ul>
+</header>
 </div>
