--- a/app/views/ua/personal.html.erb
+++ b/app/views/ua/personal.html.erb
@@ -1,12 +1,12 @@
 <% @title = "Yura Voevodin - Personal" %>
-<%= render "layouts/header" %>
+<%= render "layouts/header_ua" %>
 
 <div class="col-9 mx-auto py-md-5">
 
     <div class="row fs-5 p-3 bg-light border rounded-3">
         <div class="col">
 
-            <h4>📷 Some of my favorite photos</h4>
+            <h4>📷 Деякі з моїх улюблених фото</h4>
 
             <div class="row mt-4">
                 <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
@@ -32,43 +32,43 @@
 
     <div class="row fs-5 p-3 mt-5 text-white bg-dark rounded-3">
         <div class="col">
-            <h4>🍿 Some of my favorite movies + TV series</h4>
+            <h4>🍿 Деякі з моїх улюблених фільмів + серіали</h4>
 
             <div class="row mt-4">
                 <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
                     <div class="w-100 rounded mb-4">
                         <%= image_pack_tag 'dune.jpg', class: "shadow-1-strong rounded img-fluid" %>
-                        <a href="https://en.wikipedia.org/wiki/Dune_(2021_film)" rel="nofollow" target="_blank" class="link-danger">Dune</a>
+                        <a href="https://uk.wikipedia.org/wiki/Дюна_(фільм,_2021)" rel="nofollow" target="_blank" class="link-danger">Дюна</a>
                     </div>
 
                     <div class="w-100 rounded mb-4">
                         <%= image_pack_tag 'Altered_Carbon_title.jpg', class: "shadow-1-strong rounded img-fluid" %>
-                        <a href="https://en.wikipedia.org/wiki/Altered_Carbon_(TV_series)" rel="nofollow" target="_blank" class="link-danger">Altered Carbon</a>
+                        <a href="https://uk.wikipedia.org/wiki/Зінакшений_вуглець_(телесеріал)" rel="nofollow" target="_blank" class="link-danger">Модифікований вуглець</a>
                     </div>
                 </div>
 
                 <div class="col-lg-4 mb-4 mb-lg-0">
                     <div class="w-100 rounded mb-4">
                         <%= image_pack_tag 'The.Matrix.glmatrix.2.png', class: "shadow-1-strong rounded img-fluid" %>
-                        <a href="https://en.wikipedia.org/wiki/The_Matrix" rel="nofollow" target="_blank" class="link-danger">The Matrix</a>
+                        <a href="https://uk.wikipedia.org/wiki/Матриця_(фільм)" rel="nofollow" target="_blank" class="link-danger">Матриця</a>
                     </div>
 
                     <div class="w-100 rounded mb-4">
                         <%= image_pack_tag 'The_Morning_Show.png', class: "shadow-1-strong rounded img-fluid" %>
-                        <a href="https://en.wikipedia.org/wiki/The_Morning_Show_(American_TV_series)" rel="nofollow" target="_blank" class="link-danger">Morning Show</a>
+                        <a href="https://uk.wikipedia.org/wiki/Ранкове_шоу_(телесеріал)" rel="nofollow" target="_blank" class="link-danger">Ранкове шоу</a>
                     </div>
                 </div>
 
                 <div class="col-lg-4 mb-4 mb-lg-0">
                     <div class="w-100 rounded mb-4">
                         <%= image_pack_tag 'ldr-main.jpg', class: "shadow-1-strong rounded img-fluid" %>
-                        <a href="https://en.wikipedia.org/wiki/Love,_Death_%26_Robots" rel="nofollow" target="_blank" class="link-danger">LOVE DEATH + ROBOTS</a>
+                        <a href="https://uk.wikipedia.org/wiki/Любов,_смерть_і_роботи" rel="nofollow" target="_blank" class="link-danger">Любов, смерть і роботи</a>
                     </div>
 
                     <div class="w-100 rounded mb-4">
                         <div class="row">
                             <%= image_pack_tag 'See_(TV_series)_poster.jpg', class: "shadow-1-strong rounded img-fluid" %>
-                            <a href="https://en.wikipedia.org/wiki/See_(TV_series)" rel="nofollow" target="_blank" class="link-danger">See</a>
+                            <a href="https://uk.wikipedia.org/wiki/Бачити_(телесеріал)" rel="nofollow" target="_blank" class="link-danger">Бачити</a>
                         </div>
                     </div>
                 </div>
@@ -79,18 +79,18 @@
 
     <div class="row fs-5 p-3 mt-5 bg-light border rounded-3">
         <div class="col">
-            <h4>📖 Some of my favorite books</h4>
+            <h4>📖 Деякі з моїх улюблених книг</h4>
             <ul class="list-unstyled">
-                <li><a href="https://en.wikipedia.org/wiki/Dune_(franchise)" rel="nofollow" target="_blank" class="link-info">Dune book series</a></li>
+                <li><a href="https://uk.wikipedia.org/wiki/Дюна_(франшиза)" rel="nofollow" target="_blank" class="link-info">Всесвіт Дюни</a></li>
 
-                <li><a href="https://en.wikipedia.org/wiki/Foundation_series" rel="nofollow" target="_blank" class="link-info">Foundation series</a></li>
+                <li><a href="https://uk.wikipedia.org/wiki/Фундація_(цикл_творів)" rel="nofollow" target="_blank" class="link-info">Фундація</a></li>
             </ul>
         </div>
     </div>
 
     <div class="row fs-5 p-3 mt-5 text-white bg-dark rounded-3">
         <div class="col">
-            <h4>🎮 Some of my favorite games</h4>
+            <h4>🎮 Деякі з моїх улюблених ігр</h4>
 
             <div class="row mt-4">
                 <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
@@ -101,21 +101,21 @@
 
                     <div class="w-100 rounded mb-4">
                         <%= image_pack_tag 'b5.jpg', class: "shadow-1-strong rounded img-fluid" %>
-                        <a href="https://en.wikipedia.org/wiki/Battlefield_V" rel="nofollow" target="_blank" class="link-danger">Battlefield V</a>
+                        <a href="https://uk.wikipedia.org/wiki/Battlefield_V" rel="nofollow" target="_blank" class="link-danger">Battlefield V</a>
                     </div>
                 </div>
 
                 <div class="col-lg-4 mb-4 mb-lg-0">
                     <div class="w-100 rounded mb-4">
                         <%= image_pack_tag 'heroes_of_the_storm.jpg', class: "shadow-1-strong rounded img-fluid" %>
-                        <a href="https://en.wikipedia.org/wiki/Heroes_of_the_Storm" rel="nofollow" target="_blank" class="link-danger">Heroes of the Storm</a>
+                        <a href="https://uk.wikipedia.org/wiki/Heroes_of_the_Storm" rel="nofollow" target="_blank" class="link-danger">Heroes of the Storm</a>
                     </div>
                 </div>
 
                 <div class="col-lg-4 mb-4 mb-lg-0">
                     <div class="w-100 rounded mb-4">
                         <%= image_pack_tag 'd2.jpg', class: "shadow-1-strong rounded img-fluid" %>
-                        <a href="https://en.wikipedia.org/wiki/Diablo_II" rel="nofollow" target="_blank" class="link-danger">Diablo 2</a>
+                        <a href="https://uk.wikipedia.org/wiki/Diablo_II" rel="nofollow" target="_blank" class="link-danger">Diablo 2</a>
                     </div>
                 </div>
             </div>
