--- a/app/views/main/timeline.html.erb
+++ b/app/views/main/timeline.html.erb
@@ -1,4 +1,4 @@
-<% @title = "Yura Voevodin - Projects" %>
+<% @title = "Yura Voevodin - Timeline" %>
 <%= render "layouts/header" %>
 
 <div class="col-9 mx-auto py-md-5">
@@ -15,15 +15,28 @@
         </div>
 
         <div class="col py-2">
-            <div class="card">
+            <div class="card border-success">
                 <div class="card-body">
                     <div class="float-right text-muted">10 February 2021</div>
                     <h4 class="card-title">CoachNow</h4>
-                    <p class="card-text">I'm started a part-time work at <b>CoachNow</b> company</p>
+                    <p class="card-text">I'm started a part-time remote work at <b>CoachNow</b> company</p>
                 </div>
             </div>
         </div>
     </div>
+
+    <% @timeline.each do |event| %>
+
+    <% if event['date'] == "" && event['title'] == "" && event['description'] == "" && event['comment'] != "" %>
+
+    <div class="row">
+        <div class="col-sm-1"><div class="vr h-100 mx-4"></div></div>
+        <div class="col">
+            <p><%= markdown(event['comment']) %></p>
+        </div>
+    </div>
+
+    <% else %>
 
     <div class="row">
         <div class="col-auto text-center flex-column d-none d-sm-flex">
@@ -33,81 +46,35 @@
         <div class="col py-2">
             <div class="card">
                 <div class="card-body">
-                    <div class="float-right text-muted">22 July 2021</div>
-                    <h4 class="card-title">✳️ New Release - My University</h4>
-                    <p class="card-text">New version of <b>My University</b> iOS app is published</p>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-auto text-center flex-column d-none d-sm-flex">
-            <%= render "layouts/dot" %>
-        </div>
-
-        <div class="col py-2">
-            <div class="card">
-                <div class="card-body">
-                    <div class="float-right text-muted">16 March 2020</div>
-                    <h4 class="card-title">Clowder</h4>
-                    <p class="card-text">I'm started working at <b>Clowder</b> company</p>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-auto text-center flex-column d-none d-sm-flex">
-            <%= render "layouts/dot" %>
-        </div>
-
-        <div class="col py-2">
-            <div class="card">
-                <div class="card-body">
-                    <div class="float-right text-muted">March 2020</div>
-                    <h4 class="card-title">App Dev Academy</h4>
+                    <div class="float-right text-muted"><%= event['date'] %></div>
+                    <h4 class="card-title"><%= event['title'] %></h4>
                     <div class="card-text">
-                        <p>I'm finished working at <b>App Dev Academy</b> 4+ years of work</p>
-                        <p>I worked there as Software Developer, building apps for iOS, iPadOS and macOS</p>
+                        <%= markdown(event['description']) %>
                     </div>
+                    <% if event.key?("data") %>
+                    <% data = event["data"] %>
+                    <div>
+                        <%= image_pack_tag data["image"], class: "img-thumbnail" %>
+                    </div>
+                    <% end %>
+                    
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-auto text-center flex-column d-none d-sm-flex">
-            <%= render "layouts/dot" %>
-        </div>
+    <% end %>
 
-        <div class="col py-2">
-            <div class="card">
-                <div class="card-body">
-                    <div class="float-right text-muted">July 2019</div>
-                    <h4 class="card-title">🧑‍🍼 Eve</h4>
-                    <p class="card-text">My daughter is born ❤️</p>
-                </div>
-            </div>
-        </div>
-    </div>
-
+    <% end %>
 
     <div class="row">
         <div class="col-auto text-center flex-column d-none d-sm-flex">
-            <%= render "layouts/dot" %>
+            <div class="row h-50"></div>
+            <%= image_pack_tag 'dot.svg', class: "rounded-circle mx-auto d-block mt-2", size: '25x25' %>
+            <div class="h-50 mx-4 mt-4"></div>
         </div>
 
-        <div class="col py-2">
-            <div class="card">
-                <div class="card-body">
-                    <div class="float-right text-muted">24 December 2018</div>
-                    <h4 class="card-title">🎉 My University</h4>
-                    <p class="card-text">Starded a new project - <b>My University</b> web service and API on Rails framework</p>
-                    <p>At this day I made a first commit</p>
-                </div>
-            </div>
-        </div>
+        <div class="col py-2"></div>
     </div>
 
 </div>
