--- a/app/views/main/timeline.html.erb
+++ b/app/views/main/timeline.html.erb
@@ -10,7 +10,7 @@
       <div class="row">
         <div class="col-auto text-center flex-column d-none d-sm-flex">
             <div class="row h-50"></div>
-            <%= image_pack_tag 'dot.svg', class: "rounded-circle mx-auto d-block", size: '25x25' %>
+            <i class="bi bi-keyboard" style="font-size: 1.5rem; color: gray;"></i>
             <div class="vr h-50 mx-4 mt-2"></div>
         </div>
 
@@ -40,7 +40,16 @@
 
     <div class="row">
         <div class="col-auto text-center flex-column d-none d-sm-flex">
-            <%= render "layouts/dot" %>
+            <div class="vr h-50 mx-4 mb-2"></div>
+
+            <% if event.key?("symbol") %>
+            <% symbol = event["symbol"] %>
+                <i class="bi <%= symbol['icon'] %>" style="font-size: 1.5rem; color: <%= symbol['color'] %>;"></i>
+            <% else %>
+            <%= image_pack_tag 'dot.svg', class: "rounded-circle mx-auto d-block", size: '25x25' %>
+            <% end %>
+            
+            <div class="vr h-50 mx-4 mt-2"></div>
         </div>
 
         <div class="col py-2">
@@ -70,7 +79,7 @@
     <div class="row">
         <div class="col-auto text-center flex-column d-none d-sm-flex">
             <div class="vr h-50 mx-4 mb-2"></div>
-            <%= image_pack_tag 'dot.svg', class: "rounded-circle mx-auto d-block", size: '25x25' %>
+            <i class="bi bi-heart" style="font-size: 1.5rem; color: red;"></i>
             <div class="h-50 mx-4 mt-4"></div>
         </div>
 
