--- a/app/views/main/timeline.html.erb
+++ b/app/views/main/timeline.html.erb
@@ -19,7 +19,7 @@
                 <div class="card-body">
                     <div class="float-right text-muted">10 February 2021</div>
                     <h4 class="card-title">CoachNow</h4>
-                    <p class="card-text">I'm started a part-time remote work at <b>CoachNow</b> company</p>
+                    <p class="card-text">I'm started a part-time remote work at <a href="https://coachnow.io" class="link-dark">CoachNow</a> company <br /><br /> My main responsabitity here, is support <a href="https://apps.apple.com/app/coachnow-coaching-platform/id596598472" class="link-dark">CoachNow app</a> (iOS and iPadOS) and add new features. </br > It's an app with long history (7+ years) and mixed codebase (Objective C and Swift) with a lot of dependencies.</p>
                 </div>
             </div>
         </div>
@@ -44,11 +44,11 @@
 
             <% if event.key?("symbol") %>
             <% symbol = event["symbol"] %>
-                <i class="bi <%= symbol['icon'] %>" style="font-size: 1.5rem; color: <%= symbol['color'] %>;"></i>
+            <i class="bi <%= symbol['icon'] %>" style="font-size: 1.5rem; color: <%= symbol['color'] %>;"></i>
             <% else %>
             <%= image_pack_tag 'dot.svg', class: "rounded-circle mx-auto d-block", size: '25x25' %>
             <% end %>
-            
+
             <div class="vr h-50 mx-4 mt-2"></div>
         </div>
 
@@ -60,39 +60,56 @@
                     <div class="card-text">
                         <%= markdown(event['description']) %>
                     </div>
+
                     <% if event.key?("data") %>
                     <% data = event["data"] %>
+                    <% if data.key?("image") %>
+                    <% image = data["image"] %>
                     <div>
-                        <%= image_pack_tag data["image"], class: "img-thumbnail w-50 h-50" %>
+                        <img src="<%= image_path(image['path']) %>" class="img-thumbnail w-50 h-50" data-bs-toggle="modal" data-bs-target="#<%= image['id'] %>" />
+
+                        <div class="modal fade" id="<%= image['id'] %>" tabindex="-1" aria-labelledby="imageModal" aria-hidden="true">
+                          <div class="modal-dialog modal-lg">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    <img src="<%= image_path(image['path']) %>" class="img-fluid" />
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <% end %>
-                    
                 </div>
+                <% end %>
+                <% end %>
+
             </div>
         </div>
     </div>
+</div>
 
-    <% end %>
+<% end %>
 
-    <% end %>
+<% end %>
 
-    <div class="row">
-        <div class="col-auto text-center flex-column d-none d-sm-flex">
-            <div class="vr h-50 mx-4 mb-2"></div>
-            <i class="bi bi-heart" style="font-size: 1.5rem; color: red;"></i>
-            <div class="h-50 mx-4 mt-4"></div>
-        </div>
+<div class="row">
+    <div class="col-auto text-center flex-column d-none d-sm-flex">
+        <div class="vr h-50 mx-4 mb-2"></div>
+        <i class="bi bi-heart" style="font-size: 1.5rem; color: red;"></i>
+        <div class="h-50 mx-4 mt-4"></div>
+    </div>
 
-        <div class="col py-2">
-            <div class="card">
-                <div class="card-body">
-                    <div class="float-right text-muted">July 1990</div>
-                    <h4 class="card-title">When it's all started</h4>
-                    <div class="card-text"></div>
-                </div>
+    <div class="col py-2">
+        <div class="card">
+            <div class="card-body">
+                <div class="float-right text-muted">July 1990</div>
+                <h4 class="card-title">When it's all started</h4>
+                <div class="card-text"></div>
             </div>
         </div>
     </div>
+</div>
 
 </div>
 
