--- a/app/views/main/timeline.html.erb
+++ b/app/views/main/timeline.html.erb
@@ -3,7 +3,7 @@
 
 <div class="col-9 mx-auto py-md-5">
 
-    <h2 class="text-center">My Timeline</h2>
+    <h2 class="text-center">The Timeline</h2>
 
     <div class="container py-2 mt-4 mb-4">
 
@@ -18,8 +18,8 @@
             <div class="card border-success">
                 <div class="card-body">
                     <div class="float-right text-muted">10 February 2021</div>
-                    <h4 class="card-title">CoachNow</h4>
-                    <p class="card-text">I'm started a part-time remote work at <a href="https://coachnow.io" class="link-dark">CoachNow</a> company <br /><br /> My main responsabitity here, is support <a href="https://apps.apple.com/app/coachnow-coaching-platform/id596598472" class="link-dark">CoachNow app</a> (iOS and iPadOS) and add new features. </br > It's an app with long history (7+ years) and mixed codebase (Objective C and Swift) with a lot of dependencies.</p>
+                    <h4 class="card-title"></h4>
+                    <p class="card-text">I've started part-time remote work at <a href="https://coachnow.io" class="link-dark">CoachNow</a> company <br /><br /> My main responsibility here is to support the <a href="https://apps.apple.com/app/coachnow-coaching-platform/id596598472" class="link-dark">CoachNow app</a> (iOS and iPadOS) and add new features. </br > It's an app with a long history (7+ years) and mixed codebase (Objective C and Swift) with a lot of dependencies.</p>
                 </div>
             </div>
         </div>
@@ -42,11 +42,14 @@
         <div class="col-auto text-center flex-column d-none d-sm-flex">
             <div class="vr h-50 mx-4 mb-2"></div>
 
-            <% if event.key?("symbol") %>
-            <% symbol = event["symbol"] %>
+            <% if event.key?("data") %>
+            <% data = event["data"] %>
+            <% if data.key?("symbol") %>
+            <% symbol = data["symbol"] %>
             <i class="bi <%= symbol['icon'] %>" style="font-size: 1.5rem; color: <%= symbol['color'] %>;"></i>
             <% else %>
             <%= image_pack_tag 'dot.svg', class: "rounded-circle mx-auto d-block", size: '25x25' %>
+            <% end %>
             <% end %>
 
             <div class="vr h-50 mx-4 mt-2"></div>
