--- a/app/views/main/timeline.html.erb
+++ b/app/views/main/timeline.html.erb
@@ -47,7 +47,7 @@
                     <div class="col py-2">
                         <div class="card">
                             <div class="card-body">
-                                <div class="float-right text-muted"><%= event['date'] %></div>
+                                <div class="float-right text-muted" id="<%= event['date'].delete(' ') %>"><%= event['date'] %></div>
                                 <h4 class="card-title"><%= event['title'] %></h4>
                                 <div class="card-text">
                                     <%= markdown(event['description']) %>
