--- a/app/views/main/timeline.html.erb
+++ b/app/views/main/timeline.html.erb
@@ -16,7 +16,33 @@
         <% if event['date'] == "" && event['title'] == "" && event['description'] == "" && event['comment'] != "" %>
 
         <div class="row">
-            <div class="col-auto text-center flex-column d-none d-sm-flex"><div class="vr h-100 mx-4"></div></div>
+
+            <div class="col-auto text-center flex-column d-none d-sm-flex">
+                <% if event.key?("data") %>
+                <% data = event["data"] %>
+                <% if data.key?("symbol") %>
+                <% symbol = data["symbol"] %>
+
+                <% if index == 0 %>
+                <div class="row h-50 mx-4"></div>
+                <% else %>
+                <div class="vr h-50 mx-4 mb-2"></div>
+                <% end %>
+
+                <i class="bi <%= symbol['icon'] %>" style="font-size: 1.5rem; color: <%= symbol['color'] %>;"></i>
+                <div class="vr h-50 mx-4 mt-2"></div>
+                <% end %>
+                <% else %>
+
+                <% if index == 0 %>
+                <div class="row h-50 mx-4"></div>
+                <% else %>
+                <div class="vr h-100 mx-4"></div>
+                <% end %>
+                
+                <% end %>
+            </div>
+
             <div class="col px-4">
                 <p><%= markdown(event['comment']) %></p>
             </div>
