--- a/app/views/main/timeline.html.erb
+++ b/app/views/main/timeline.html.erb
@@ -39,7 +39,7 @@
                 <% else %>
                 <div class="vr h-100 mx-4"></div>
                 <% end %>
-                
+
                 <% end %>
             </div>
 
@@ -75,8 +75,8 @@
             <div class="col py-2">
                 <div class="card">
                     <div class="card-body">
-                        <div class="float-right text-muted" id="<%= event['date'].delete(' ') %>"><%= event['date'] %></div>
-                        <h4 class="card-title"><%= event['title'] %></h4>
+                        <div class="float-right" id="<%= event['date'].delete(' ') %>"><span class="text-secondary-emphasis"><%= event['date'] %></span></div>
+                        <h4 class="card-title"><span class="text-secondary-emphasis"><%= event['title'] %></span></h4>
                         <div class="card-text">
                             <%= markdown(event['description']) %>
                         </div>
@@ -123,7 +123,7 @@
         <div class="col py-2">
             <div class="card">
                 <div class="card-body">
-                    <div class="float-right text-muted">July 1990</div>
+                    <div class="float-right">July 1990</div>
                     <h4 class="card-title">When it's all started</h4>
                     <div class="card-text"></div>
                 </div>
