--- a/app/views/main/main.html.erb
+++ b/app/views/main/main.html.erb
@@ -38,6 +38,9 @@
                         <ul class="fs-6 fw-light">
                             <li>Make completely new app Home screen</li>
                             <li>Write unit tests for cover app business logic</li>
+                            <li>Build an app with a modular architecture</li>
+                            <li>Work with analytics services <span class="fw-bold">Firebase, AppsFlyer, Iterable</span></li>
+                            <li>Implement <span class="fw-bold">A/B tests</span></li>
                         </ul>
                     </div>
                 </dd>
@@ -88,7 +91,7 @@
                             <li>Design a database architecture and use <code>Core Data</code> framework</li>
                             <li>Write code on <code>Swift</code> programming language</li>
                             <li>Implement networking layer - <span class="fw-bold">REST API</span></li>
-                            <li>Integrate third-party dependencies (<span class="fw-bold">Firebase</span>, <span class="fw-bold">Crashlytics</span>, etc.)</li>
+                            <li>Integrate third-party dependencies</li>
                         </ul>
                     </div>
                 </dd>
