--- a/app/views/main/main.html.erb
+++ b/app/views/main/main.html.erb
@@ -143,7 +143,7 @@
                     <span class="mx-2"><a href="<%= item['url'] %>" rel="nofollow" target="_blank" class="link-light"><i class="bi <%= item['icon'] %> fs-4"></i></a></span>
                     <% end %>
                 </div>
-                <div class="my-3"><a href="/cv_yura_voevodin.pdf" class="btn btn-outline-warning" target="_blank"><i class="bi bi-arrow-down-circle"></i> Download CV</a></div>
+                <div class="my-3"><a href="/Yurii_Voievodin_CV.pdf" class="btn btn-outline-warning" target="_blank"><i class="bi bi-arrow-down-circle"></i> Download CV</a></div>
             </div>
         </div>
     </div>
