--- a/app/views/layouts/_header_ua.html.erb
+++ b/app/views/layouts/_header_ua.html.erb
@@ -5,6 +5,7 @@
         <i class="bi bi-house-fill"></i>
         <% end %>
         <li class="nav-item"><%= link_to "Особисте", "/ua/personal", class: "nav-link #{ is_active('personal')}" %></li>
+        <li class="nav-item"><%= link_to "Блог", "/ua/blog", class: "nav-link #{ is_active('blog')}" %></li>
     </ul>
 </header>
 </div>
