--- a/app/views/main/projects.html.erb
+++ b/app/views/main/projects.html.erb
@@ -31,6 +31,21 @@
         </div>
     </div>
 
+    <div class="row fs-5 p-3 mt-5 bg-primary-subtle rounded-3">
+
+        <div class="col-sm-5 mb-2">
+            <%= image_tag 'photoblog.png', class: "img-fluid" %>
+        </div>
+
+        <div class="col">
+            <h4>Photographer portfolio</h4>
+
+            <ul class="list-unstyled">
+                <li><a href="https://myphotoblog.herokuapp.com" rel="nofollow" target="_blank">myphotoblog.herokuapp.com</a> - website on <a href="https://rubyonrails.org" rel="nofollow" target="_blank">Rails</a> framework and <a href="https://getbootstrap.com" rel="nofollow" target="_blank">Bootstrap</a> toolkit <a href="https://github.com/yura-voevodin/photoblog" rel="nofollow" target="_blank"><i class="bi bi-github"></i></a></li>
+            </ul>
+        </div>
+    </div>
+
     <%= render "layouts/footer" %>
 </div>
 
