--- a/app/views/main/projects.html.erb
+++ b/app/views/main/projects.html.erb
@@ -7,8 +7,8 @@
 
     <div class="row fs-5 p-3 bg-primary-subtle rounded-3">
 
-        <div class="col-sm-2 mb-2" style="max-height: 100px;">
-            <%= image_tag 'my-university.png', class: "img-thumbnail h-100" %>
+        <div class="col-sm-5 mb-2">
+            <%= image_tag 'my-university-project.png', class: "img-fluid" %>
         </div>
 
         <div class="col">
