--- a/app/views/main/projects.html.erb
+++ b/app/views/main/projects.html.erb
@@ -5,9 +5,9 @@
 
 <div class="col-9 mx-auto py-md-5">
 
-    <div class="row fs-5 p-3 bg-primary-subtle rounded-3">
+    <div class="row fs-5 p-3 bg-dark-subtle rounded-3">
 
-        <div class="col-sm-5 mb-2">
+        <div class="col-sm-5">
             <%= image_tag 'my-university-project.png', class: "img-fluid" %>
         </div>
 
@@ -21,8 +21,13 @@
         </div>
     </div>
 
-    <div class="row fs-5 p-3 mt-5 bg-primary-subtle rounded-3">
-        <div class="container-fluid py-3 px-3">
+    <div class="row fs-5 p-3 mt-5 bg-dark-subtle rounded-3">
+
+        <div class="col-sm-5">
+            <%= image_tag 'blog.png', class: "img-fluid" %>
+        </div>
+
+        <div class="col">
             <h4>Personal  website</h4>
 
             <ul class="list-unstyled">
@@ -31,9 +36,9 @@
         </div>
     </div>
 
-    <div class="row fs-5 p-3 mt-5 bg-primary-subtle rounded-3">
+    <div class="row fs-5 p-3 mt-5 bg-dark-subtle rounded-3">
 
-        <div class="col-sm-5 mb-2">
+        <div class="col-sm-5">
             <%= image_tag 'photoblog.png', class: "img-fluid" %>
         </div>
 
