--- a/app/views/ua/blog/blog.html.erb
+++ b/app/views/ua/blog/blog.html.erb
@@ -3,7 +3,7 @@
 
 <div class="col-9 mx-auto py-md-5">
 
-  <div class="row fs-5 p-3 mt-5 bg-light-subtle rounded-3">
+  <div class="row fs-5 p-3 mt-5 bg-dark-subtle rounded-3">
     <div class="container-fluid py-3 px-3">
         <ul class="list-unstyled">
             <li>
