--- a/app/views/ua/personal.html.erb
+++ b/app/views/ua/personal.html.erb
@@ -3,7 +3,7 @@
 
 <div class="col-9 mx-auto py-md-5">
 
-    <div class="row fs-5 p-3 bg-light-subtle rounded-3">
+    <div class="row fs-5 p-3 bg-dark-subtle rounded-3">
         <div class="col">
 
             <h4>📷 Деякі з моїх улюблених фото</h4>
@@ -22,7 +22,7 @@
         </div>
     </div>
 
-    <div class="row fs-5 p-3 mt-5 bg-light-subtle rounded-3" >
+    <div class="row fs-5 p-3 mt-5 bg-dark-subtle rounded-3" >
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -62,7 +62,7 @@
         </div>
     </div>
 
-    <div class="row fs-5 p-3 mt-5 bg-light-subtle rounded-3" >
+    <div class="row fs-5 p-3 mt-5 bg-dark-subtle rounded-3" >
         <div class="container">
             <div class="row">
                 <div class="col-12">
